--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/index.js"
+    "start": "node app/index.js &"
   },
   "repository": {
     "type": "git",
